# AutoVP

./: .gitignore  LICENSE  README.md  pyproject.toml
autovp/: __main__.py  defaults.py  log.py
autovp/architecture/: __init__.py  base.py  module.py
scripts/: _directory.py  build_exe.py
