[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoVP"
version = "0.0.1"
authors = [
  { name="Arjan Lemmens", email="arjanmail@tutamail.com" },
]
description = "Automatically generate a SystemC VP based on user defined requirements"
readme = "README.md"
requires-python = ">= 3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]